infrastructure/base/longhorn/longhorn.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-storage
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      k8s:io.kubernetes.pod.namespace: longhorn-system
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: longhorn-system
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik-system
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEntities:
        - host
        - remote-node
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik-external-system
            app.kubernetes.io/name: traefik
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik-system
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: longhorn-system
