infrastructure/base/longhorn/longhorn.traefik.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: route-longhorn-clients
  namespace: traefik-external-system
  labels:
    networking.tinyrack.net/owner: longhorn
  annotations:
    networking.tinyrack.net/hosts: "*.winetree94.com"
spec:
  description: Allow Longhorn components to reach external Traefik
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      app.kubernetes.io/name: traefik
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: longhorn-system
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: route-longhorn-clients
  namespace: traefik-system
  labels:
    networking.tinyrack.net/owner: longhorn
  annotations:
    networking.tinyrack.net/hosts: "*.winetree94.com"
spec:
  description: Allow Longhorn components to reach internal Traefik
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      app.kubernetes.io/name: traefik
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: longhorn-system
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: route-longhorn
  namespace: traefik-system
  labels:
    networking.tinyrack.net/owner: longhorn
  annotations:
    networking.tinyrack.net/hosts: longhorn.intranet.winetree94.com
spec:
  description: Allow the longhorn.intranet.winetree94.com route
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      app.kubernetes.io/name: traefik
  egress:
    - toServices:
        - k8sService:
            namespace: longhorn-system
            serviceName: longhorn-frontend
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
